--- a/index.html
+++ b/index.html
@@ -52,6 +52,36 @@
                     <a href="" class="header_link header_link_sign">Sign in</a>
                     <a href="" class="header_link header_link_login">Log in</a>
                 </div>
+
+                <input type="checkbox" id="toggle_menu" hidden>
+
+                <div class="burger_menu">
+                    <label for="toggle_menu">
+                        <img src="images/Burger.png" class="toggle_burger_menu">
+                        <svg class="toggle_close_menu" viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-width="2"
+                                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                        </svg>
+                    </label>
+                </div>
+
+                <ul class="nav_menu_sidebar">
+                    <li class="nav_item_sidebar">
+                        <a class="nav_link_sidebar" href="#">Homepage</a>
+                    </li>
+                    <li class="nav_item_sidebar">
+                        <a class="nav_link_sidebar" href="#">Menu</a>
+                    </li>
+                    <li class="nav_item_sidebar">
+                        <a class="nav_link_sidebar" href="#">Sale off</a>
+                    </li>
+                    <li class="nav_item_sidebar">
+                        <a class="nav_link_sidebar" href="#">News</a>
+                    </li>
+                    <li class="nav_item_sidebar">
+                        <a class="nav_link_sidebar" href="#">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
