coding header content

--- a/index.html
+++ b/index.html
@@ -85,6 +85,51 @@
             </div>
         </div>
     </section>
+    <section class="header_content">
+        <div class="container">
+            <div class="header_content_wrapper">
+                <div class="header_content_left">
+                    <div class="header_title">
+                        <h1 class="header_text">
+                            Order your favourite food
+                        </h1>
+                        <p class="header_caption">
+                            Hamburger has many flavors, have you tried Cheese Beef Hamburger?
+                        </p>
+                    </div>
+                    <div class="header_total">
+
+                        <div class="header_total_price">
+                            <p class="total_title">Total Order </p>
+                            <span class="total_price"> :$5.39</span>
+                        </div>
+
+                        <div class="order">
+                            <div class="count">
+                                <button class="count_btn increase"> + </button>
+                                <span class="number"> 3 </span>
+                                <button class="count_btn decrease"> - </button>
+                            </div>
+                            <button class="order_btn">
+                                <img src="images/Shopping%20Basket.png" alt="">
+                                Order now
+                            </button>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="header_content_right">
+                    <div class="header_time">
+                        <img src="images/Frame%2029.png" class="time_img" alt="">
+                    </div>
+                    <div class="header_img">
+                    <img src="images/hamburger.png" class="burger_img" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </header>
 
 
