responsive header content

--- a/index.html
+++ b/index.html
@@ -120,12 +120,33 @@
 
                 </div>
                 <div class="header_content_right">
-                    <div class="header_time">
-                        <img src="images/Frame%2029.png" class="time_img" alt="">
-                    </div>
                     <div class="header_img">
                     <img src="images/hamburger.png" class="burger_img" alt="">
                     </div>
+                    <div class="header_time">
+                        <img src="images/Frame%2029.png" class="time_img" alt="">
+                    </div>
+                </div>
+                <img src="images/Frame%2029.png" class="t-img" alt="">
+                <div class="header_total_mobile">
+
+                    <div class="header_total_price">
+                        <p class="total_title">Total Order </p>
+                        <span class="total_price"> :$5.39</span>
+                    </div>
+
+                    <div class="order_mobile">
+                        <div class="count">
+                            <button class="count_btn increase"> + </button>
+                            <span class="number"> 3 </span>
+                            <button class="count_btn decrease"> - </button>
+                        </div>
+                        <button class="order_btn">
+                            <img src="images/Shopping%20Basket.png" alt="">
+                            Order now
+                        </button>
+                    </div>
+
                 </div>
             </div>
         </div>
