--- a/index.html
+++ b/index.html
@@ -561,7 +561,6 @@
             </div>
         </div>
     </section>
-
     <section class="sale-off">
         <div class="container">
             <div class="sale-off_header">
@@ -664,6 +663,25 @@
             </div>
         </div>
     </section>
+    <section class="section_mobile_app">
+        <div class="img_section_mobile_app">
+            <img src="images/Group 22.png" alt="">
+        </div>
+        <div class="content_section_mobile_app">
+            <h6>Exclusive offers and more</h6>
+            <h4>MCDONALD’S MOBILE APP</h4>
+            <p>As a global No. 1 fast food brand, McDonald's wishes to bring customers not only delicious and hygienic food of international standards but also the best service experience.</p>
+            <div class="download_btn_app">
+                <a href="#">
+                    <img src="images/ammount.png"  alt="">
+                </a>
+                <a href="#">
+                    <img src="images/ammount (1).png"  alt="">
+                </a>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 
