coding section_search_location

--- a/index.html
+++ b/index.html
@@ -681,7 +681,21 @@
             </div>
         </div>
     </section>
+    <section class="section_search_location">
+        <div class="container_site">
+            <div class="content_search_location">
 
+                <h6>FIND A FOODELI STORE NEAR YOU</h6>
+                <p>see the convenience store address with you most</p>
+                <form action="">
+                    <input type="text" placeholder="Typing location">
+                    <button type="submit">See on map</button>
+                </form>
+                <img src="images/location1.png"  alt="">
+                <img src="images/location2.png" alt="">
+            </div>
+        </div>
+    </section>
 </main>
 
 
